# context-engineering-workshop-00

./: README.md
demo-app/: .gitignore  CLAUDE.md  INIT_OBSERVATIONS.md  README.md  config.py  pyproject.toml
demo-app/.claude/: settings.json  settings.local.json
demo-app/.claude/hooks/: README.md  debug.sh  hook-template.sh  instructions-loaded.sh  lint-on-edit.sh  lint-on-stop.sh  log-edits.sh  precompact-checkpoint.sh  protect-files.sh  tests-on-stop.sh
demo-app/.claude/skills/feature-spec-creator/: SKILL.md
demo-app/.claude/skills/my-init/: SKILL.md
demo-app/.claude/skills/spec-creator/: SKILL.md
demo-app/.claude/skills/spec-creator/references/: spec-template.md
demo-app/SKILL VERSIONS/: feature-spec-creator-02-core.md  feature-spec-creator-03-polish.md
demo-app/app/: __init__.py  models.py
demo-app/app/feeds/: __init__.py  routes.py
demo-app/app/templates/: base.html  feed_detail.html  index.html
demo-app/preso-resources/: spec-creator-01-skeleton.md  spec-creator-02-core.md  spec-creator-03-polish.md
demo-app/tests/: CLAUDE.md  conftest.py  test_feeds.py
docs/: index.html
docs/handouts/: agent-files-card-mock.html  context-ladder-card-mock.html  hook-events-card-mock.html  skill-spectrum-card-mock.html
